--- a/mobile.css
+++ b/mobile.css
@@ -90,7 +90,8 @@
         margin-top: 9px;
     }
     .date {
-        width: 34px;
+        width: 100%;
+        max-width: 34px;
         height: 20px;
         border-radius: 3px;
         font-size: 10px;
@@ -161,7 +162,7 @@
         font-size: 2vw;
     }
     .course {
-        width: 20vw;
+        width: 15vw;
     }
     .bag {
         margin-top: 0;
@@ -173,6 +174,12 @@
         min-width: 113px;
         margin-right: 17px;
     }
+    .course3 {
+        margin: 0;
+    }
+    .total-img {
+        padding-bottom: 24px;
+    }
     .title-text{
         font-size: 10px;
     }
@@ -180,7 +187,7 @@
         border-radius: 10px;
         max-width: 400px;
         width: 100%;
-        min-width: 330px;
+        min-width: 250px;
         padding: 10px 19px 0;
     }
     .dashpoad-item {
@@ -210,10 +217,11 @@
         border-radius: 10px;
         max-width: 400px;
         width: 100%;
+        min-width: 250px;
     }
     .img-sales {
-        height: 100%;
-        width: 46.5vw;
+        height: 96px;
+        width: 117px;
     }
     .banner1 {
         padding: 18px 27px;
@@ -291,7 +299,7 @@
         display: flex;
     }
     .header_search {
-        min-width: 350px;
+        min-width: 270px;
     }
     .wrap {
         padding-top: 21px;
